--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hayatul-website",
   "version": "0.1.0",
+  "homepage": "https://mwinamijr.github.io/hayatul-website",
   "private": true,
   "dependencies": {
     "@radix-ui/react-slider": "^1.3.6",
@@ -24,6 +25,8 @@
     "vite": "^7.1.10"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -48,6 +51,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
